# phone_mapper

./: README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: test.yml
NOTES/: baldey_coolest_aliases.md  proxy_dicts.md
phone_mapper/: __init__.py  arpabet.py  baldey.py  cgn.py  coolest.py  diphone.py  mapper.py  validate.py
phone_mapper/data/: celex_to_ipa.json  disc_to_ipa.json  ipa_to_definition.json  ipa_to_example_words.json  sampa_to_ipa.json
phone_mapper/data/baldey/: baldey_to_disc.json  baldey_to_ipa.json
phone_mapper/data/dutch/: celex_phone_set.json  cgn_to_ipa.json  coolest_to_ipa.json  ipa_to_example_words.json
phone_mapper/data/english/: arpabet_to_disc.json  arpabet_to_example_words.json  arpabet_to_ipa.json  ipa_to_example_words.json
phone_mapper/data/german/: ipa_to_example_words.json
tests/: test_mapper.py
