[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone_mapper"
version = "0.1.16"
description = "Phoneme mapping between IPA, SAMPA, CELEX, DISC, CGN, ARPAbet, Baldey, and COOLEST"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Martijn Bentum", email = "bentummartijn@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/martijnbentum/phone_mapper"
Repository = "https://github.com/martijnbentum/phone_mapper"

[tool.setuptools]
packages = ["phone_mapper"]

[tool.setuptools.package-data]
phone_mapper = ["data/*.json", "data/**/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
